scrollbar added and week 4 mod 1 quiz 1  fixed

--- a/research/styles/globals.css
+++ b/research/styles/globals.css
@@ -8,7 +8,19 @@ body {
     text-align: center;
     font-family: Optima;
     font-size: 22px;
+    /* overflow-y: scroll; */
 }
+
+::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 7px;
+  }
+  ::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0, 0, 0, .5);
+    -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, .5);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  }
 
 a {
     color: inherit;
